.sisyphus/evidence/task-03-auth-check.log
Checking server v0.1.0 (/home/rghamilton3/workspace/getaltair/altair/apps/server)
error[E0277]: the trait bound `rust_decimal::Decimal: ToSchema` is not satisfied
  --> apps/server/src/core/handlers/relations.rs:36:25
   |
36 |     pub confidence: Option<Decimal>,
   |                            ^^^^^^^ the trait `ToSchema` is not implemented for `rust_decimal::Decimal`
   |
   = help: the following other types implement trait `ToSchema`:
             &'t [T]
             &'t mut [T]
             &str
             ()
             AppUser
             BTreeMap<K, T>
             BTreeSet<K>
             Box<T>
           and 42 others

error[E0277]: the trait bound `rust_decimal::Decimal: PartialSchema` is not satisfied
  --> apps/server/src/core/handlers/relations.rs:36:25
   |
36 |     pub confidence: Option<Decimal>,
   |                            ^^^^^^^ the trait `ComposeSchema` is not implemented for `rust_decimal::Decimal`
   |
   = help: the following other types implement trait `ComposeSchema`:
              &[T]
              &mut [T]
              &str
              AppUser
             BTreeMap<K, T>
             BTreeSet<K>
             Box<T>
             Cow<'a, T>
            and 41 others
   |    = note: required for `rust_decimal::Decimal` to implement `PartialSchema`
note: required by a bound in `utoipa::ToSchema::name`
   --> /home/rghamilton3/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/utoipa-5.4.0/src/lib.rs:374:21
    |
374 | pub trait ToSchema: PartialSchema {
    |                     ^^^^^^^^^^^^^ required by this bound in `ToSchema::name`
...
405 |     fn name() -> Cow<'static, str> {
    |        ---- required by this bound in this associated function

error[E0277]: the trait bound `sqlx::types::Json<JsonValue>: ToSchema` is not satisfied
  --> apps/server/src/core/handlers/relations.rs:37:23
   |
37 |     pub evidence: Option<sqlx::types::Json<serde_json::Value>>,
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ToSchema` is not implemented for `sqlx::types::Json<JsonValue>`
   |
   = help: the following other types implement trait `ToSchema`:
             &'t [T]
             &'t mut [T]
             &str
             ()
             AppUser
             BTreeMap<K, T>
             BTreeSet<K>
             Box<T>
           and 42 others

error[E0277]: the trait bound `sqlx::types::Json<JsonValue>: PartialSchema` is not satisfied
  --> apps/server/src/core/handlers/relations.rs:37:23
   |
37 |     pub evidence: Option<sqlx::types::Json<serde_json::Value>>,
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ComposeSchema` is not implemented for `sqlx::types::Json<JsonValue>`
   |
   = help: the following other types implement trait `ComposeSchema`:
              &[T]
              &mut [T]
              &str
              AppUser
              BTreeMap<K, T>
             BTreeSet<K>
             Box<T>
             Cow<'a, T>
            and 41 others
   |    = note: required for `sqlx::types::Json<JsonValue>` to implement `PartialSchema`
note: required by a bound in `utoipa::ToSchema::name`
   --> /home/rghamilton3/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/utoipa-5.4.0/src/lib.rs:374:21
    |
374 | pub trait ToSchema: PartialSchema {
    |                     ^^^^^^^^^^^^^ required by this bound in `ToSchema::name`
...
405 |     fn name() -> Cow<'static, str> {
    |        ---- required by this bound in this associated function

For more information about this error, try `rustc --explain E0277`.
error: could not compile `server` (lib) due to 8 previous errors
